<resources>
  <string name="app_name">QuickCalc</string>
  <string name="number_one">1</string>
  <string name="number_two">2</string>
  <string name="number_three">3</string>
  <string name="number_four">4</string>
  <string name="number_five">5</string>
  <string name="number_six">6</string>
  <string name="number_seven">7</string>
  <string name="number_eight">8</string>
  <string name="number_nine">9</string>
  <string name="decimal_point">.</string>
  <string name="add_to_stack">push</string>
  <string name="number_zero">0</string>
  <string name="invert_sign">+/-</string>
  <string name="result_info">Your Answer will show here</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
