<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:alignmentMode="alignBounds"
            android:rowOrderPreserved="true"
            android:columnOrderPreserved="true"
            android:theme="@style/MyButtonTheme"
            android:columnCount="4"
            android:rowCount="4">
  <Button
      android:layout_row="0"
      android:layout_column="0"
      android:text="@string/number_seven"/>
  <Button
      android:layout_row="0"
      android:layout_column="1"
      android:text="@string/number_eight"/>
  <Button
      android:layout_row="0"
      android:layout_column="2"
      android:text="@string/number_nine"/>
  <Button
      android:layout_row="1"
      android:layout_column="0"
      android:text="@string/number_four"/>
  <Button
      android:layout_row="1"
      android:layout_column="1"
      android:text="@string/number_five"/>
  <Button
      android:layout_row="1"
      android:layout_column="2"
      android:text="@string/number_six"/>
  <Button
      android:layout_row="2"
      android:layout_column="0"
      android:text="@string/number_one"/>
  <Button
      android:layout_row="2"
      android:layout_column="1"
      android:text="@string/number_two"/>
  <Button
      android:layout_row="2"
      android:layout_column="2"
      android:text="@string/number_three"/>

  <Button
      android:layout_row="0"
      android:layout_column="3"
      android:text="@string/invert_sign"/>
  <Button
      android:layout_row="3"
      android:layout_column="0"
      android:text="@string/number_zero"/>
  <Button
      android:layout_row="3"
      android:layout_column="1"
      android:width="0dp"
      android:text="@string/decimal_point"/>
  <Button
      android:layout_row="3"
      android:layout_column="2"
      android:text="@string/add_to_stack"/>
</GridLayout>